# rewardhack-probe

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  mirror-to-personal.yml
config/: probe_config.json
docs/: ARCHZOS_AGENT_ARCHITECTURE_CONTEXT.md  REWARD_HACKING_TAXONOMY.md
examples/: run_gridworld_hack.py  run_probe_battery.py
rewardhack_probe/: __init__.py  cli.py  models.py  scorer.py  taxonomy.py
rewardhack_probe/adapters/: __init__.py  bedrock_adapter.py  openai_adapter.py
rewardhack_probe/probe_battery/: __init__.py  _shared.py  deceptive_alignment.py  eval_awareness.py  goal_substitution.py  spec_gaming.py  sycophancy.py
rewardhack_probe/report/: __init__.py  dashboard.py  store.py
rewardhack_probe/toy_envs/: __init__.py  gridworld.py  text_game.py
tests/: conftest.py  test_probe_battery.py  test_report_generation.py  test_scorer.py  test_toy_envs.py
