[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rewardhack-probe"
version = "0.1.0"
description = "Reward-hacking toy environments and inference-time probe battery."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ArchzOS" }]
dependencies = [
  "duckdb>=1.0,<2",
  "streamlit>=1.36,<2",
  "plotly>=5.20,<6",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[project.scripts]
rewardhack-probe = "rewardhack_probe.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["rewardhack_probe*"]
